@@ -226,6 +226,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 12148) Text highlight wasn't applied to cleanly deleted and added
   lines in diff output
 * (bug 10166) Fix a PHP warning in Language::getMagic
+* Only mark rollback edits as minor if the user can normally mark edits as minor.
 
 == Parser changes in 1.12 ==
 
@@ -339,6 +340,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Fixed sessionid attribute in action=login
 * Standardized limits. Revisions and Deletedrevisions formerly using 200 / 10000, 
   now 500 / 5000, in line with other modules.
+
 
 === Languages updated in 1.12 ===
 
